# server

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml  requirements.txt
ccyt_srv/: __main__.py
ccyt_srv/handlers/: connection.py  protocol.py
ccyt_srv/utils/: convert.py  types.py
